<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WTalkieActivity!</string>
    <string name="app_name">Walkie-Talkie</string>
    <string name="settings">Settings</string>
    <string name="startScan">Start Scan</string>
    <string name="stopScan">Stop Scan</string>
    <string name="startAP">Run Access Point</string>
    <string name="connectedTo">Connected to:</string>
    <string name="connectionType">Connection Type:</string>
    <string name="pushToTalk">Push To Talk</string>
</resources>
